# HEX_WORK_CODE

./: .mcp.json  CLAUDE.md  UI.vsdx  bug.md  idea.md
.claude/memory/: MEMORY.md  build-system.md  code-conventions.md  coding-guide.md  effective-workflow.md  pitfalls-collection.md  project-architecture.md  project-reference.md  user-profile.md
ValveSimulator/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ValveSimulator.pro  ValveSimulator.qtvscr  ValveSimulator.slnx  ValveSimulator.vcxproj  ValveSimulator.vcxproj.filters  build_vs.bat  custom_titlebar.cpp  custom_titlebar.h  deploy.bat  main.cpp  main_window.cpp  main_window.h  resources.qrc  test_client_example.c  test_panel.cpp  test_panel.h  valve_params_dialog.cpp  valve_simulator.cpp  valve_types.h  waveform_chart.cpp  waveform_chart.h
ValveSimulator/debug/: moc_custom_titlebar.cpp  moc_main_window.cpp  moc_valve_display.cpp  moc_valve_simulator.cpp  qrc_resources.cpp
ValveSimulator/debug/ValveSimulator.tlog/: CL.16236.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ValveSimulator.lastbuildstate  ValveSimulator.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog
ValveSimulator/debug/qt/: qtvars.xml
ValveSimulator/debug/qt/qmake/d83af5fe629a4c4aa11b2cf6cf565ea6/: .qmake.stash  qtvars.vcxproj
ValveSimulator/debug/qt/qmake/f07b3c19679649fd9ac22fb7f190b7c1/: .qmake.stash  qtvars.pro  qtvars.vcxproj
ValveSimulator/release/: moc_predefs.h  moc_test_panel.cpp  moc_valve_params_dialog.cpp  moc_waveform_chart.cpp
ValveSimulator/release/ValveSimulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ValveSimulator.lastbuildstate  ValveSimulator.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog
ValveSimulator/release/qt/qmake/91acbcfc13f94d409bc2a3917f78a42e/: qtvars.vcxproj  qtvars.xml
ValveSimulator/release/qt/qmake/b0603b081a2141b28a1ea3d0ee11640a/: qtvars.vcxproj
ValveSimulator/resources/: app_icon.rc  style.qss
ValveSimulator/scripts/: build_release.bat  compile_test.bat  setup.iss  test_set_data.ps1  test_tcp.ps1
ValveSimulator/src/core/: valve_simulator.cpp  valve_simulator.h  valve_types.h  version.h
ValveSimulator/src/network/: valve_api.cpp  valve_api.h
ValveSimulator/src/ui/: custom_titlebar.cpp  custom_titlebar.h  main.cpp  main_window.cpp  main_window.h  test_panel.cpp  test_panel.h  valve_display.cpp  valve_display.h  valve_params_dialog.cpp  valve_params_dialog.h  version_dialog.cpp  version_dialog.h  waveform_chart.h
